# byakuren.pw

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
pages/: diva_pro.md  hidden.hmd  test.md  test_2.md
src/: ascii.rs  main.rs  post.rs  rss.rs  util.rs
static/: style.css
templates/: about.html.tera  base.html.tera  error.html.tera  home.html.tera  post.html.tera
