[package]
name = "byakuren_ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features=["handlebars", "tera"]}
comrak = "0.16.0"
serde = {version = "1.0.152", features = ["derive"]}